; ModuleID = '/home/carl/AnghaBench/disque/src/extr_blocked.c_replyToBlockedClientTimedOut.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_blocked.c_replyToBlockedClientTimedOut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@BLOCKED_JOB_REPL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [78 x i8] c"-NOREPL Timeout reached before replicating to the requested number of nodes\0D\0A\00", align 1
@BLOCKED_GETJOB = common dso_local global i64 0, align 8
@shared = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"Unknown btype in replyToBlockedClientTimedOut().\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @replyToBlockedClientTimedOut(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @BLOCKED_JOB_REPL, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %10 = call i32 @sdsnew(i8* getelementptr inbounds ([78 x i8], [78 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @addReplySds(%struct.TYPE_6__* %9, i32 %10)
  br label %25

12:                                               ; preds = %1
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @BLOCKED_GETJOB, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %12
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @shared, i32 0, i32 0), align 4
  %21 = call i32 @addReply(%struct.TYPE_6__* %19, i32 %20)
  br label %24

22:                                               ; preds = %12
  %23 = call i32 @serverPanic(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %18
  br label %25

25:                                               ; preds = %8, %24
  ret void
}

declare dso_local i32 @addReplySds(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @sdsnew(i8*) #1

declare dso_local i32 @addReply(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @serverPanic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
